--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ body {
   background: #000;
   color: #fff;
   min-height: 100vh;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: manipulation;
 }
 
 code {
