--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -58,32 +58,44 @@
     padding: 30px 20px;
     gap: 0px;
   }
-  
-  /* Horizontal phone mode */
-  @media (orientation: landscape) and (max-width: 900px) {
-    .timer-container {
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      gap: 20px;
-      padding: 20px;
-      max-width: 100vw;
-    }
-    
-
-    
-    .workout-list {
-      flex: 1;
-      max-height: 200px;
-      margin-top: 0;
-      margin-left: 20px;
-    }
-  }
-  
-  
-
 }
 
+/* Horizontal phone mode */
+@media (orientation: landscape) and (max-width: 900px) {
+  .timer-container {
+    flex-direction: row !important;
+    align-items: flex-start !important;
+    justify-content: flex-start !important;
+    gap: 20px;
+    padding: 20px;
+    max-width: 100vw;
+  }
+  
+  .workout-list {
+    flex: 1;
+    max-height: 200px;
+    margin-top: 0;
+    margin-left: -20px;
+    width: 50% !important;
+  }
+}
 
-
-
+/* Alternative landscape detection */
+@media (min-width: 667px) and (max-height: 375px) {
+  .timer-container {
+    flex-direction: row !important;
+    align-items: flex-start !important;
+    justify-content: flex-start !important;
+    gap: 20px;
+    padding: 20px;
+    max-width: 100vw;
+  }
+  
+  .workout-list {
+    flex: 1;
+    max-height: 200px;
+    margin-top: 0;
+    margin-left: 20px;
+    width: 50% !important;
+  }
+}
