--- a/src/components/WorkoutList.css
+++ b/src/components/WorkoutList.css
@@ -5,12 +5,14 @@
   max-height: 300px;
   overflow-y: auto;
   padding: 10px;
-  background: rgba(255, 255, 255, 0.05);
+  margin-top: 10px;
+  background: transparent;
   border-radius: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: none;
   position: relative;
   z-index: 1;
   min-height: 100px;
+  width: 87vw;
 }
 
 .workout-item {
@@ -24,12 +26,12 @@
   transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0.6;
   transform: translateY(0);
-  height: 20px !important;
-  min-height: 20px !important;
-  max-height: 20px !important;
+  height: 30px !important;
+  min-height: 30px !important;
+  max-height: 30px !important;
   overflow: hidden;
   width: 100%;
-  min-width: 300px;
+  min-width: auto;
   box-sizing: border-box;
   position: relative;
   margin-bottom: 8px;
