--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -70,7 +70,9 @@
     padding: 20px;
     max-width: 100vw;
   }
-  
+  .timer-display {
+    margin-left: 24px;
+  }
   .workout-list {
     flex: 1;
     max-height: 200px;
