--- a/src/components/WorkoutList.css
+++ b/src/components/WorkoutList.css
@@ -2,7 +2,7 @@
 .workout-list {
   display: flex;
   flex-direction: column;
-  max-height: 300px;
+  max-height: 100vh;
   overflow-y: auto;
   padding: 10px;
   margin-top: 10px;
@@ -12,6 +12,7 @@
   position: relative;
   z-index: 1;
   min-height: 100px;
+  max-width: 400px;
   width: 87vw;
 }
 
