--- a/src/components/WorkoutList.css
+++ b/src/components/WorkoutList.css
@@ -195,3 +195,26 @@
 .workout-item.selectable:focus {
   outline: none;
 }
+
+/* Disable all interactions when timer is running */
+.workout-item:not(.selectable) {
+  pointer-events: none !important;
+  user-select: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  -webkit-tap-highlight-color: transparent !important;
+  -webkit-touch-callout: none !important;
+}
+
+.workout-item:not(.selectable):hover {
+  background: inherit !important;
+  border-color: inherit !important;
+  transform: none !important;
+  box-shadow: inherit !important;
+}
+
+.workout-item:not(.selectable):active {
+  transform: none !important;
+  box-shadow: inherit !important;
+}
